fix(buttons): remove unneeded fix for stop/reload
This fix is not needed anymore and is creating a misalignment.

Closes #1010.

--- a/theme/parts/buttons-fixes.css
+++ b/theme/parts/buttons-fixes.css
@@ -207,11 +207,6 @@ button.close {
   visibility: visible !important;
 }
 
-/* Stop/Reload button */
-#stop-reload-button .toolbarbutton-icon {
-	margin-top: -2px !important;
-}
-
 /* Toolbar Animations */
 #downloads-button .toolbarbutton-animatable-box {
 	top: 8px !important;
